.provarCaches/00Df2000001KKNJEA4/objects/INRF__Rule_Criteria__c.object
<CustomObject>
    <description>Criteria definitions to match for Rules in RuleForce.</description>
    <fields>
        <fullName>INRF__Aggregate_Function__c</fullName>
        <label>Aggregate Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUM</fullName>
                </value>
                <value>
                    <fullName>COUNT</fullName>
                </value>
                <value>
                    <fullName>MIN</fullName>
                </value>
                <value>
                    <fullName>MAX</fullName>
                </value>
                <value>
                    <fullName>AVG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INRF__Child_Relationship_Name__c</fullName>
        <label>Child Relationship Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Criteria_Object__c</fullName>
        <label>Criteria Object</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Evaluate_Child_Criteria_Using__c</fullName>
        <label>Evaluate Child Criteria Using</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INRF__Field_API_Name__c</fullName>
        <description>This is the metadata of the field API name which is belongs to sObject or evaluation criteria.</description>
        <label>Field API Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Field_Apex_Type__c</fullName>
        <label>Field Apex Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>STRING</fullName>
                    <default>true</default>
                    <label>STRING</label>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>PICKLIST</fullName>
                </value>
                <value>
                    <fullName>TEXTAREA</fullName>
                </value>
                <value>
                    <fullName>PHONE</fullName>
                </value>
                <value>
                    <fullName>BOOLEAN</fullName>
                </value>
                <value>
                    <fullName>DATE</fullName>
                </value>
                <value>
                    <fullName>DATETIME</fullName>
                </value>
                <value>
                    <fullName>CURRENCY</fullName>
                </value>
                <value>
                    <fullName>DOUBLE</fullName>
                </value>
                <value>
                    <fullName>REFERENCEID</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>ADDRESS</fullName>
                </value>
                <value>
                    <fullName>BASE64</fullName>
                </value>
                <value>
                    <fullName>INTEGER</fullName>
                </value>
                <value>
                    <fullName>LONG</fullName>
                </value>
                <value>
                    <fullName>MULTIPICKLIST</fullName>
                </value>
                <value>
                    <fullName>PERCENT</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INRF__Field_Name__c</fullName>
        <label>Field Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Field_Type__c</fullName>
        <label>Field Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Multi-Picklist</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INRF__Global_Variable__c</fullName>
        <label>Global Variable</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Maximum_Value__c</fullName>
        <label>Maximum Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Minimum_Value__c</fullName>
        <label>Minimum Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Operator__c</fullName>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equals</fullName>
                </value>
                <value>
                    <fullName>Not Equal To</fullName>
                </value>
                <value>
                    <fullName>Contains</fullName>
                </value>
                <value>
                    <fullName>Does Not Contain</fullName>
                </value>
                <value>
                    <fullName>Starts With</fullName>
                </value>
                <value>
                    <fullName>Ends With</fullName>
                </value>
                <value>
                    <fullName>Greater Than</fullName>
                </value>
                <value>
                    <fullName>Greater Or Equal</fullName>
                </value>
                <value>
                    <fullName>Less Than</fullName>
                </value>
                <value>
                    <fullName>Less Or Equal</fullName>
                </value>
                <value>
                    <fullName>Includes</fullName>
                </value>
                <value>
                    <fullName>Excludes</fullName>
                </value>
                <value>
                    <fullName>Between</fullName>
                </value>
                <value>
                    <fullName>Blank</fullName>
                </value>
                <value>
                    <fullName>Not Blank</fullName>
                </value>
                <value>
                    <fullName>Does Not Start With</fullName>
                </value>
                <value>
                    <fullName>Does Not End With</fullName>
                </value>
                <value>
                    <fullName>Regular Expression</fullName>
                </value>
                <value>
                    <fullName>Not Between</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INRF__Rule_Object__c</fullName>
        <formula>INRF__Rule_Set__r.INRF__Object__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INRF__Rule_Set__c</fullName>
        <label>Rule Set</label>
        <referenceTo>INRF__Rule_Set__c</referenceTo>
        <relationshipLabel>Rule Criterias</relationshipLabel>
        <relationshipName>Rule_Criterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>INRF__Sequence__c</fullName>
        <description>Criteria which needs to execute in which sequence.</description>
        <label>Sequence</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INRF__Value_Type__c</fullName>
        <description>This will store Value Type. As Field Type is required for Data Type</description>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enter Value</fullName>
                    <default>true</default>
                    <label>Enter Value</label>
                </value>
                <value>
                    <fullName>Field Reference</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                    <isActive>false</isActive>
                    <label>Formula</label>
                </value>
                <value>
                    <fullName>Global Value</fullName>
                    <isActive>false</isActive>
                    <label>Global Value</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INRF__Value__c</fullName>
        <description>Value which need to evaluate.</description>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>Rule Criteria</label>
    <listViews>
        <fullName>INRF__All</fullName>
        <columns>NAME</columns>
        <columns>INRF__Criteria_Object__c</columns>
        <columns>INRF__Field_API_Name__c</columns>
        <columns>INRF__Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Rule Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>